# eduflowserver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api_config.json  build.sh  build_dll.bat  build_linux.sh  build_programm.bat  check_system.sh  checker.bat  config.json  database_config.json  fix_postgresql_link.bat  install.sh  install_gcc.bat  run_program.sh  sessions.json
api/: ApiService.cpp  ApiServiceAuth.cpp  ApiServiceCrud.cpp  ApiServiceEvents.cpp  ApiServiceGetters.cpp  ApiServiceGroup.cpp  ApiServiceLogin.cpp  ApiServiceMain.cpp  ApiServiceNews.cpp  ApiServiceProfile.cpp  ApiServiceRegister.cpp  ApiServiceSessions.cpp  ApiServiceStudent.cpp  ApiServiceTeacher.cpp  ApiServiceWork.cpp
article/: ArticleEditor.cpp
configs/: ConfigManager.cpp
database/: DatabaseCrud.cpp  DatabaseEvents.cpp  DatabaseGroups.cpp  DatabasePortfolios.cpp  DatabaseService.cpp  DatabaseSessions.cpp  DatabaseSetup.cpp  DatabaseSpecializations.cpp  DatabaseStats.cpp  DatabaseStudents.cpp  DatabaseTeachers.cpp  DatabaseUsers.cpp
include/api/: ApiService.h
include/article/: ArticleEditor.h
include/configs/: ConfigManager.h
include/database/: DatabaseService.h
include/locale/: LocaleManager.h
include/logger/: logger.h
include/models/: Models.h
lang/: locale_en.json  locale_ru.json
locale/: LocaleManager.cpp
logger/: logger.cpp
main/: main.cpp
src/: ApiService.cpp  ApiService.h  ConfigManager.cpp  ConfigManager.h  DatabaseService.cpp  DatabaseService.h  LocaleManager.cpp  LocaleManager.h  Models.h  locale_ru.json  main.cpp  main.cpp2
